--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -46,6 +46,7 @@
     <Compile Include="OutageType.cs" />
     <Compile Include="POI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerCommunication.cs" />
     <Compile Include="UserPermissions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
